2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Removed '*' in the head of system messages.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added a title tag to the template for log views.

2008-02-25  Satoshi Nakagawa <artension@gmail.com>

	Added DOCTYPE and some meta tags to the template for log views.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Added some classes and attributes to log lines for more control in css.
	Replaced %Q[] to %||.

2008-02-24  Kevin Ballard <kballard@gmail.com>

	Fixed a bug, an effect stopping character should not render as an end tag when there is no effect.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Improved a regex to not capture unnecessary part.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Added a menu item, 'Copy Log as HTML'.
	Changed a menu item caption from 'Clear Scrollback' to 'Clear Mark'.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	We don't want to change units when closing a channel.
	Based on a patch from Kevin Ballard.

==== LimeChat 0.16.3 ====

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Added LogController#content_string.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Changed /query without parameters to close the current talk.

2008-02-24  Kevin Ballard <kballard@gmail.com>

	Added HTML4 color names support for YAML themes.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	rgba() should allow /.\d/ for alpha values.

2008-02-24  Satoshi Nakagawa <artension@gmail.com>

	Enabled continuous spell checking by default.

2008-02-24  Kevin Ballard <kballard@gmail.com>

	Changed to allow rgb() and rgba() strings in YAML theme files.

==== LimeChat 0.16.2 ====

2008-02-15  Satoshi Nakagawa <artension@gmail.com>

	Fixed a method not found bug while formatting '%@'.

2008-02-15  Satoshi Nakagawa <artension@gmail.com>

	Changed title of welcome dialog.

2008-02-15  Satoshi Nakagawa <artension@gmail.com>
