@@ -37,6 +37,6 @@
 	<key>showFileHierarchyDrawer</key>
 	<true/>
 	<key>windowFrame</key>
-	<string>{{387, 62}, {1054, 966}}</string>
+	<string>{{462, 62}, {1054, 966}}</string>
 </dict>
 </plist>
